Сделала все страницы проекта

--- a/Project/Computer_Geniuses/Library.html
+++ b/Project/Computer_Geniuses/Library.html
@@ -4,28 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
-    <meta name="description" content="Изучение истории и того, как она формирует нас.">
-    <meta name="keywords" content="Нельсон, гипертекст, компьютерная библиотека.">
+    <meta name="description" content="Изучение истории и того, как она формирует нас">
+    <meta name="keywords" content="Нельсон, гипертекст, Тьюринг, энигма, Гейтс, Microsoft, Ритчи, Unix, C, Бернерс-Ли, WWW">
     <title>Библиотека</title>
 </head>
 <body>
     <header>
         <nav class="menu">
             <ul>
-                <li><a href="">Главная</a></li>
-                <li><a href="">Библиотека</a></li>
-                <li><a href="">Галерея</a></li>
-                <li><a href="">Контакты</a></li>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="library.html">Библиотека</a></li>
+                <li><a href="gallery.html">Галерея</a></li>
+                <li><a href="contacts.html">Контакты</a></li>
             </ul>
         </nav>
+        <hr>
+        <hr>     
+        <hr>
+        <h1><font face="Comic Sans MS" color="#007BA7">Библиотека</font></h1>
     </header>
     <main>
         <hr>
-        <img src="img/pngwing.com.png" alt="Знак гения" width="100">
-        <h2>Ученные, изменившие компьютерный мир</h2>
+        <hr>  
         <hr>
         <section id="alan-turing">
-            <h3><a href="Alan_Turing.html"><font face="Comic Sans MS">Алан Мэтисон Тьюринг</font></a></h3>
+            <h2><a href="Alan_Turing.html" target="_blank"><font face="Comic Sans MS">Алан Мэтисон Тьюринг</font></a></h2>
             <p><img src="img/Alan_Turing.jpg" alt="На фото изображен Алан Тьюринг" width="500"></p>
             <p align="justify">
                 <strong>Кто он:</strong> <font size="5" face="Comic Sans MS">А</font>лан Тьюринг &mdash; математик, криптоаналитик и логик. Его называют отцом теоретической информатики и искусственного интеллекта.
@@ -34,8 +37,9 @@
                 <strong>Основные достижения:</strong> он был удостоен премии Смита, офицера Ордена Британской империи и члена Королевского общества. С 1966 года <i>«Ассоциация вычислительной техники»</i> ежегодно присуждает премию Тьюринга за вклад в вычислительное сообщество.
             </p>
         </section>
+        <hr>
         <section id="bill-gates">
-            <h3><a href=""><font face="Comic Sans MS">Билл Гейтс</font></a></h3>
+            <h2><a href="bill_gates.html" target="_blank"><font face="Comic Sans MS">Билл Гейтс</font></a></h2>
             <p><img src="img/Bill_Gates.jpg.webp" alt="На фото изображен Билл Гейтс" width="500"></p>
             <p align="justify">
                 <strong>Кто он: </strong><font size="5" face="Comic Sans MS">Б</font>илл Гейтс &mdash; американский предприниматель, один из <em>основателей компании Microsoft</em>, неоднократно становился самым богатым человеком в мире по версии журнала <cite>«Forbes».</cite>
@@ -47,8 +51,9 @@
                 <strong>Основные достижения:</strong> он был награжден «Национальной медалью» за технологии и инновации, заслуженным членом «Британского компьютерного общества» и премией Бауэра за лидерство в бизнесе.
             </p>
         </section>
+        <hr>
         <section id="dennis-ritchie">
-            <h3><a href=""><font face="Comic Sans MS">Деннис Ритчи</font></a></h3>
+            <h2><a href="dennis_ratchie.html" target="_blank"><font face="Comic Sans MS">Деннис Ритчи</font></a></h2>
             <p><img src="img/Dennis_Ritchie.jpg" alt="На фото изображен Деннис Ритчи" width="500"></p>
             <p align="justify">
                 <strong>Кто он:</strong> <font size="5" face="Comic Sans MS">Д</font>еннис Ритчи был революционным ученым-компьютерщиком, который сыграл ключевую роль в разработке языка программирования «С» и операционной системы Unix. 
@@ -61,8 +66,9 @@
                 <strong>Основные достижения:</strong> Ричи был удостоен премии Тьюринга, медали Хэмминга от <abbr title="Institute of Electrical and Electronics Engineers">IEEE</abbr>, премии компьютерных пионеров, стипендиата «Музея истории компьютеров» и премии Гарольда Пендера.
             </p>
         </section>
+        <hr>
         <section id="tim-berners">
-            <h3><a href=""><font face="Comic Sans MS">Тим Бернерс-Ли</font></a></h3>
+            <h2><a href="tim_berners_lee.html" target="_blank"><font face="Comic Sans MS">Тим Бернерс-Ли</font></a></h2>
             <p><img src="img/Tim_Berners.jpg" alt="На фото изображен Тим Бернерс-Ли" width="500"></p>
             <p align="justify">
                 <strong>Кто он: <font size="5" face="Comic Sans MS">Т</font></strong>им Бернерс-Ли &mdash; ученый-компьютерщик, наиболее известный как изобретатель <em>Всемирной паутины</em>.
@@ -74,8 +80,9 @@
                 <strong>Основные достижения:</strong> Тим был посвящен в рыцари королевой Елизаветой II за выдающуюся работу, удостоен награды Software System Award, Гордости Британии и Молодого новатора года (1995).
             </p>
         </section>
+        <hr>
         <section id="ted-nelson">
-            <h3><a href="Ted_Nelson.html" target="_blank"><font face="Comic Sans MS">Тед Нельсон</font></a></h3>
+            <h2><a href="ted_nelson.html" target="_blank"><font face="Comic Sans MS">Тед Нельсон</font></a></h2>
             <p><img src="img/Ted-Nelson.jpg" alt="На фото изображен Тед Нельсон" width="500"></p>
             <p align="justify">
                 <strong>Кто он: <font size="5" face="Comic Sans MS">Т</font></strong>ед Нельсон &mdash; американский социолог, философ, известный как один из пионеров информационных технологий и основатель концепции гепертекста.
@@ -87,8 +94,11 @@
             </p>
         </section>
     </main>
+    <hr>
     <footer> 
-        <small>&copy; 2024 Lopation. Все права защищены.</small> 
+        <p>
+            <small>&copy; 2024 Lopation. Все права защищены.</small>
+        </p> 
     </footer> 
 </body>
 </html>
