--- a/Project/Computer_Geniuses/Ted_Nelson.html
+++ b/Project/Computer_Geniuses/Ted_Nelson.html
@@ -13,10 +13,10 @@
     <header>
         <nav>
             <ul>
-                <li><a href="">Главная</a></li>
-                <li><a href="index.html">Библиотека</a></li>
-                <li><a href="">Галерея</a></li>
-                <li><a href="">Контакты</a></li>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="library.html">Библиотека</a></li>
+                <li><a href="gallery.html">Галерея</a></li>
+                <li><a href="contacts.html">Контакты</a></li>
             </ul>
             <hr>
         </nav>
@@ -35,7 +35,7 @@
                 - Тед Нельсон
             </p>
             <hr>
-            <h1>Теодор Холм Нельсон</h1>
+            <h1><font face="Comic Sans MS" color="#d78b4f">Теодор Холм Нельсон</font></h1>
             <p align="justify">
                 Родившийся 17 июня 1937 году в Чикаго, Иллинойс, США, Теодор Холм Нельсон &mdash; американский философ, ученый в области информатики и социолог. 
                 Он специализируется в области информационных технологий и киберфилософии. 
@@ -45,8 +45,31 @@
                 <figcaption>Тед Нельсон</figcaption>
             </figure>
         </section>
+        <table border="1" cellspacing="0" cellpadding="4">
+            <tr>
+                <td bgcolor="#f4f4f4" height="20"><font size="2"><b>Содержание</b></font></td>
+            </tr>
+            <tr>
+                <td  height="10"><font size="2"><a href="#a">Юность</a></font></td>
+            </tr>
+            <tr>
+                <td  height="10"><font size="2"><a href="#b">Карьера</a></font></td>
+            </tr>
+            <tr>
+                <td  height="10"><font size="2"><a href="#c">Изобретения</a></font></td>
+            </tr>
+            <tr>
+                <td  height="10"><font size="2"><a href="#d">Личная жизнь</a></font></td>
+            </tr>
+            <tr>
+                <td  height="10"><font size="2"><a href="#e">Награды и достижения</a></font></td>
+            </tr>
+            <tr>
+                <td height="10"><font size="2"><a href="#f">Опубликованные произведения и книги</a></font></td>
+            </tr>
+        </table>
         <article>
-            <h2>Юность</h2>
+            <h2 id="a">Юность</h2>
             <hr>
             <p align="justify">
                 Нельсон отдает должное своим родителям за большую часть своего творчества и возможностей, которые помогли дать толчок многим его идеям. 
@@ -64,7 +87,7 @@
                 В начале 1960-х годов Нельсон написал Джону Лилли, исследователю дельфинов, с несколькими идеями, которые он придумал для изучения языка дельфинов. Лилли была впечатлена и наняла его. 
                 Нельсон провел год, работая с дельфинами в Коммуникационной исследовательской лаборатории «Lilly» в Майами, анализируя поведение дельфинов и снимая фильмы о деятельности дельфинов, прежде чем перейти к своей карьере в области информационных технологий.
             </p>  
-            <h2>Карьера</h2>
+            <h2 id="b">Карьера</h2>
             <hr>
             <h3>Компания Itty Bitty Machine</h3>
             <p align="justify">
@@ -86,7 +109,7 @@
                 Он представил себе компьютерную программу, которая помогла бы ему организовать все ветви различных деревьев идей нелинейным способом, гораздо более близким к тому, как на самом деле работает его мозг, чем к линейному стилю бумажных заметок. 
                 Этот взаимосвязанный стиль организации идей Нельсон называл <strong>«гипертекстом»</strong>.
             </p>
-            <h2>Изобретения</h2>
+            <h2 id="c">Изобретения</h2>
             <hr>
             <h3>Гипертекст и гипермедиа</h3>
             <p align="justify">
@@ -110,8 +133,9 @@
                 Идея Нельсона позволила бы избежать того, что он называл «иерархическим адом», и обеспечить всеобщий сетевой нейтралитет, позволив страницам ссылаться друг на друга, где бы они ни находились.
             </p>
             <h3>Xanadu и упрощенный гипертекст</h3>
-            <p align="justify">Большую часть своей взрослой жизни Нельсон посвятил разработке Xanadu. 
-            Для него он представлял и до сих пор представляет собой правильный способ реализации гипертекста.
+            <p align="justify">
+                Большую часть своей взрослой жизни Нельсон посвятил разработке Xanadu. 
+                Для него он представлял и до сих пор представляет собой правильный способ реализации гипертекста.
             </p>
             <p align="justify"><b>Как потенциальная глобальная библиотека индексированной информации, Xanadu начинала со следующих основных целей:</b></p>
                 <ul>
@@ -143,6 +167,7 @@
                 Дизайн <abbr title="World Wide Web">WWW</abbr> не отказался от формата иерархии, как хотел Нельсон. 
                 Он просто сплел паутину связанных соединений, которые находились на вершине существующей иерархии папок.
             </p>
+            <p align="justify">
                 Нельсону не понравилось такое упрощение его идеи. 
                 По сей день он все еще работает над своей системой информационных технологий, основанной на истинном сетевом нейтралитете, а не на тонко завуалированной иерархии.
             </p>
@@ -218,7 +243,7 @@
                 Концептуальная структура относится к конструкциям, которые программисты имели в виду при проектировании программного обеспечения, таким идеям, как модель страницы веб-сайтов, веб-модель Интернета и модель уровня алгоритмов машинного обучения. 
                 Ощущение включает в себя последние штрихи дизайна, такие как цветовая палитра, выбор слов и типографика.
             </p>
-            <h2>Личная жизнь</h2>
+            <h2 id="d">Личная жизнь</h2>
             <hr>
             <p align="justify">
                 Первой женой Теда Нельсона была <b>Марлен Малликоут</b>, компьютерный консультант и разработчик программного обеспечения из Орегона. 
@@ -229,7 +254,7 @@
                 Сарно также всю жизнь дружила с Марлен Малликоут, первой женой Нельсона. Сарно &mdash; журналист и редактор, специализирующийся на технологиях. 
                 Она получила <i>«Грэмми»</i> за исполнение Третьей симфонии Малера в симфоническом хоре, а также имеет черный пояс третьей степени от организации <i>боевых искусств Будзинкан</i> в Японии.
             </p>
-            <h2>Награды и достижения</h2>
+            <h2 id="e">Награды и достижения</h2>
             <hr>
             <h3>Премия памяти Юрия Рубинского</h3>
             <p align="justify">
@@ -239,7 +264,7 @@
             <p align="justify">
                 В 2001 году он был посвящен в рыцари французским правительством, став официальным членом французской организации <em>«Officier des Arts et Lettres»</em>.
             </p>
-            <h2>Опубликованные произведения и книги</h2>
+            <h2 id="f">Опубликованные произведения и книги</h2>
             <hr>
             <h3>Компьютерная библиотека / Машины мечты</h3>
             <figure>
@@ -280,8 +305,11 @@
             </p>
         </article>    
     </main>
+    <hr>
     <footer>
-        <small>&copy; 2024 Lopation. Все права защищены.</small>
+        <p>
+            <small>&copy; 2024 Lopation. Все права защищены.</small>
+        </p>
     </footer>
 </body>
 </html>
