--- a/Project/Computer_Geniuses/Alan_Turing.html
+++ b/Project/Computer_Geniuses/Alan_Turing.html
@@ -13,10 +13,10 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="">Главная</a></li>
-                    <li><a href="index.html">Библиотека</a></li>
-                    <li><a href="">Галерея</a></li>
-                    <li><a href="">Контакты</a></li>
+                    <li><a href="index.html">Главная</a></li>
+                    <li><a href="library.html">Библиотека</a></li>
+                    <li><a href="gallery.html">Галерея</a></li>
+                    <li><a href="contacts.html">Контакты</a></li>
                 </ul>
                 <hr>
             </nav>
@@ -35,7 +35,7 @@
                     - Алан Тьюринг
                 </p>
                 <hr>
-                <h1>Алан Мэтисон Тьюринг</h1>
+                <h1><font face="Comic Sans MS" color="#d78b4f">Алан Мэтисон Тьюринг</font></h1>
                 <p align="justify">
                     Родившийся 23 июня 1912 года в Уилмслоу (Великобритания), Алан Тьюринг &mdash; английский математик, логик, криптограф, оказавший существенное влияние на развитие информатики. 
                     Офицер ордена Британской империи (<abbr title="Order of the British Empire">OBE</abbr>, 1945), член Лондонского королевского общества (1951).
@@ -49,8 +49,31 @@
                     </figcaption>
                 </figure>
             </section>
+            <table border="1" cellspacing="0" cellpadding="4">
+                <tr>
+                    <td bgcolor="#f4f4f4" height="20"><font size="2"><b>Содержание</b></font></td>
+                </tr>
+                <tr>
+                    <td height="10"><font size="2"><a href="#a">Юность</a></font></td>
+                </tr>
+                <tr>
+                    <td height="10"><font size="2"><a href="#b">Карьера</a></font></td>
+                </tr>
+                <tr>
+                    <td height="10"><font size="2"><a href="#c">Изобретения</a></font></td>
+                </tr>
+                <tr>
+                    <td height="10"><font size="2"><a href="#d">Личная жизнь</a></font></td>
+                </tr>
+                <tr>
+                    <td height="10"><font size="2"><a href="#e">Последние годы</a></font></td>
+                </tr>
+                <tr>
+                    <td height="10"><font size="2"><a href="#f">Память</a></font></td>
+                </tr>
+            </table>
             <article>
-                <h2>Юность</h2>
+                <h2 id="a">Юность</h2>
                 <hr>
                 <p align="justify">
                     Тьюринг происходит из семьи аристократов: отец <b>Джулиус Мэтисон Тьюринг</b> &mdash; заведовал британским колониальным ведомством в Индии, а мать <b>Этель Сара Стоуни</b> &mdash; была дочерью главного инженера Мадраских железных дорог. 
@@ -120,7 +143,7 @@
                     После смерти Моркома Тьюринг задумался о том, как устроен человеческий разум, и как бы «внедрить» его в какой-то бестелесный предмет, чтобы сделать бессмертным. 
                     Именно так мы сейчас воспринимаем компьютер.
                 </p>
-                <h2>Карьера</h2>
+                <h2 id="b">Карьера</h2>
                 <hr>
                 <p>
                     <strong>
@@ -191,7 +214,7 @@
                     В конце войны всем тем, кто работал в Блетчли-парке, была разослана служебная записка, напоминающая им, что кодекс молчания, продиктованный Законом о государственной тайне, не закончился с войной, но будет продолжаться бесконечно.
                     Таким образом, несмотря на то, что Тьюринг был назначен офицером Ордена Британской империи (OBE) в 1946 году королем Георгом VI за его военные заслуги, его работа оставалась секретной в течение многих лет.
                 </p>
-                <h2>Изобретения</h2>
+                <h2 id="c">Изобретения</h2>
                 <hr>
                 <h3>Концепция вычислительной машины</h3>
                 <p align="justify">
@@ -300,7 +323,7 @@
                     Они позволяли предсказывать, какие процессы будут происходить в организмах и как они будут развиваться. 
                     Идеи Тьюринга в области морфогенеза нашли применение в технологии клонирования, биомедицинских исследований и разработке новых лекарственных препаратов.
                 </p>
-                <h2>Личная жизнь</h2>
+                <h2 id="d">Личная жизнь</h2>
                 <hr>
                 <p align="justify">
                     Только один раз Алан пытался устроить свою личную жизнь с женщиной. 
@@ -321,7 +344,7 @@
                     Начиная с 50-х годов в Англии гомосексуализм считался <strong>уголовным преступлением</strong>, поэтому Тьюрингу предложили выбирать &ndash; или <em>тюрьма</em> или <em>химическая кастрация</em>. 
                     Он <strong>согласился на инъекции препарата стильбэстрол</strong>, и спустя год стал импотентом.
                 </p>
-                <h2>Последние годы</h2>
+                <h2 id="e">Последние годы</h2>
                 <hr>
                 <p align="justify">
                     В 1950-м вышла одна из самых интересных и важных статей Тьюринга в области компьютерных исследований, которая называлась <cite>«Вычислительные машины и разум»</cite>. 
@@ -397,7 +420,7 @@
                 <p align="justify">       
                     Жаль, что эти извинения прозвучали с опозданием на полвека.
                 </p>
-                <h2>Память</h2>
+                <h2 id="f">Память</h2>
                 <hr>
                 <ul>
                     <li>Одна из самых престижных премий в информатике названа в честь Алана Тьюринга, а именно ежегодная награда Ассоциации вычислительной техники называется Премия Тьюринга.</li>
@@ -410,8 +433,11 @@
                 </ul>
             </article>    
         </main>
+        <hr>
         <footer>
-            <small>&copy; 2024 Lopation. Все права защищены.</small>
+            <p>
+                <small>&copy; 2024 Lopation. Все права защищены.</small>
+            </p>
         </footer>
     </body>
 </html>
