Переименован html файл

--- a/Project/Computer_Geniuses/Alan_Turing.html
+++ b/Project/Computer_Geniuses/Alan_Turing.html
@@ -54,26 +54,26 @@
                     <td bgcolor="#f4f4f4" height="20"><font size="2"><b>Содержание</b></font></td>
                 </tr>
                 <tr>
-                    <td height="10"><font size="2"><a href="#a">Юность</a></font></td>
+                    <td height="10"><font size="2"><a href="#youth">Юность</a></font></td>
                 </tr>
                 <tr>
-                    <td height="10"><font size="2"><a href="#b">Карьера</a></font></td>
+                    <td height="10"><font size="2"><a href="#career">Карьера</a></font></td>
                 </tr>
                 <tr>
-                    <td height="10"><font size="2"><a href="#c">Изобретения</a></font></td>
+                    <td height="10"><font size="2"><a href="#inventions">Изобретения</a></font></td>
                 </tr>
                 <tr>
-                    <td height="10"><font size="2"><a href="#d">Личная жизнь</a></font></td>
+                    <td height="10"><font size="2"><a href="#personalLife">Личная жизнь</a></font></td>
                 </tr>
                 <tr>
-                    <td height="10"><font size="2"><a href="#e">Последние годы</a></font></td>
+                    <td height="10"><font size="2"><a href="#recentYears">Последние годы</a></font></td>
                 </tr>
                 <tr>
-                    <td height="10"><font size="2"><a href="#f">Память</a></font></td>
+                    <td height="10"><font size="2"><a href="#memory">Память</a></font></td>
                 </tr>
             </table>
             <article>
-                <h2 id="a">Юность</h2>
+                <h2 id="youth">Юность</h2>
                 <hr>
                 <p align="justify">
                     Тьюринг происходит из семьи аристократов: отец <b>Джулиус Мэтисон Тьюринг</b> &mdash; заведовал британским колониальным ведомством в Индии, а мать <b>Этель Сара Стоуни</b> &mdash; была дочерью главного инженера Мадраских железных дорог. 
@@ -143,7 +143,7 @@
                     После смерти Моркома Тьюринг задумался о том, как устроен человеческий разум, и как бы «внедрить» его в какой-то бестелесный предмет, чтобы сделать бессмертным. 
                     Именно так мы сейчас воспринимаем компьютер.
                 </p>
-                <h2 id="b">Карьера</h2>
+                <h2 id="career">Карьера</h2>
                 <hr>
                 <p>
                     <strong>
@@ -214,7 +214,7 @@
                     В конце войны всем тем, кто работал в Блетчли-парке, была разослана служебная записка, напоминающая им, что кодекс молчания, продиктованный Законом о государственной тайне, не закончился с войной, но будет продолжаться бесконечно.
                     Таким образом, несмотря на то, что Тьюринг был назначен офицером Ордена Британской империи (OBE) в 1946 году королем Георгом VI за его военные заслуги, его работа оставалась секретной в течение многих лет.
                 </p>
-                <h2 id="c">Изобретения</h2>
+                <h2 id="inventions">Изобретения</h2>
                 <hr>
                 <h3>Концепция вычислительной машины</h3>
                 <p align="justify">
@@ -323,7 +323,7 @@
                     Они позволяли предсказывать, какие процессы будут происходить в организмах и как они будут развиваться. 
                     Идеи Тьюринга в области морфогенеза нашли применение в технологии клонирования, биомедицинских исследований и разработке новых лекарственных препаратов.
                 </p>
-                <h2 id="d">Личная жизнь</h2>
+                <h2 id="personalLife">Личная жизнь</h2>
                 <hr>
                 <p align="justify">
                     Только один раз Алан пытался устроить свою личную жизнь с женщиной. 
@@ -344,7 +344,7 @@
                     Начиная с 50-х годов в Англии гомосексуализм считался <strong>уголовным преступлением</strong>, поэтому Тьюрингу предложили выбирать &ndash; или <em>тюрьма</em> или <em>химическая кастрация</em>. 
                     Он <strong>согласился на инъекции препарата стильбэстрол</strong>, и спустя год стал импотентом.
                 </p>
-                <h2 id="e">Последние годы</h2>
+                <h2 id="recentYears">Последние годы</h2>
                 <hr>
                 <p align="justify">
                     В 1950-м вышла одна из самых интересных и важных статей Тьюринга в области компьютерных исследований, которая называлась <cite>«Вычислительные машины и разум»</cite>. 
@@ -420,7 +420,7 @@
                 <p align="justify">       
                     Жаль, что эти извинения прозвучали с опозданием на полвека.
                 </p>
-                <h2 id="f">Память</h2>
+                <h2 id="memory">Память</h2>
                 <hr>
                 <ul>
                     <li>Одна из самых престижных премий в информатике названа в честь Алана Тьюринга, а именно ежегодная награда Ассоциации вычислительной техники называется Премия Тьюринга.</li>
