--- a/Project/Computer_Geniuses/bill_gates.html
+++ b/Project/Computer_Geniuses/bill_gates.html
@@ -51,32 +51,32 @@
                 <td bgcolor="#f4f4f4" height="20"><font size="2"><b>Содержание</b></font></td>
             </tr>
             <tr>
-                <td height="10"><font size="2"><a href="#a">Юность</a></font></td>
+                <td height="10"><font size="2"><a href="#youth">Юность</a></font></td>
             </tr>
             <tr>
-                <td height="10"><font size="2"><a href="#b">Карьера</a></font></td>
+                <td height="10"><font size="2"><a href="#career">Карьера</a></font></td>
             </tr>
             <tr>
-                <td height="10"><font size="2"><a href="#c">Личная жизнь</a></font></td>
+                <td height="10"><font size="2"><a href="#personalLife">Личная жизнь</a></font></td>
             </tr>
             <tr>
-                <td height="10"><font size="2"><a href="#d">Состояние Билла Гейтса</a></font></td>
+                <td height="10"><font size="2"><a href="#condition">Состояние Билла Гейтса</a></font></td>
             </tr>
             <tr>
-                <td height="10"><font size="2"><a href="#e">Благотворительность, фонд Билла и Мелинды Гейтс</a></font></td>
+                <td height="10"><font size="2"><a href="#charity">Благотворительность, фонд Билла и Мелинды Гейтс</a></font></td>
             </tr>
             <tr>
-                <td height="10"><font size="2"><a href="#f">Книги</a></font></td>
+                <td height="10"><font size="2"><a href="#books">Книги</a></font></td>
             </tr>
             <tr>
-                <td height="10"><font size="2"><a href="#g">Фильмы о Билле Гейтсе</a></font></td>
+                <td height="10"><font size="2"><a href="#movies">Фильмы о Билле Гейтсе</a></font></td>
             </tr>
             <tr>
-                <td height="10"><font size="2"><a href="#h">Цитаты</a></font></td>
+                <td height="10"><font size="2"><a href="#quotes">Цитаты</a></font></td>
             </tr>
         </table>
         <article>
-            <h2 id="a">Юность</h2>
+            <h2 id="youth">Юность</h2>
             <hr>
             <p align="justify">
                 Билл Гейтс вырос в Сиэтле (штат Вашингтон). Его отец, <b>Уильям Генри Гейтс II</b>, был адвокатом, владел собственной компанией, после выхода на пенсию <a href="https://people.com/all-about-bill-gates-parents-8624696" target="_blank">помогал</a> сыну управлять благотворительным фондом. 
@@ -122,7 +122,7 @@
                         </small>
                     </figcaption>
                 </figure>    
-            <h2 id="b">Карьера</h2>
+            <h2 id="career">Карьера</h2>
             <hr>
             <h3>Создание Microsoft</h3>
             <p align="justify">
@@ -157,7 +157,7 @@
             <p align="justify">
                 В <b>2014 году</b> <strong><a href="https://www.rbc.ru/photoreport/04/02/2014/570416fb9a794761c0ce659a" target="_blank">ушел с поста</a> главы Microsoft</strong>, оставшись техническим советником, и стал заниматься благотворительной деятельностью, поддержкой борьбы с изменением климата и венчурными инвестициями.
             </p>
-            <h2 id="c">Личная жизнь</h2>
+            <h2 id="personalLife">Личная жизнь</h2>
             <hr>
             <p align="justify">
                 В <b>1987 году</b> на пресс-брифинге Microsoft Гейтс познакомился с <strong>Мелиндой Френч</strong>, которая на протяжении нескольких лет работала в компании менеджером отдела продаж. 
@@ -213,7 +213,7 @@
                 Позднее <cite>The New York Times</cite> со ссылкой на собственные источники <a href="https://www.rbc.ru/society/17/05/2021/60a1d5649a79473051e3ceb8" target="_blank">сообщила</a>, что еще до того, как Гейтс решил развестись с женой, он приглашал на свидания женщин, которые работали в Microsoft или благотворительном фонде. 
                 По данным газеты, это происходило в <b>2006 году</b>, а затем «год или два спустя».
             </p>
-            <h2 id="d">Состояние Билла Гейтса</h2>
+            <h2 id="condition">Состояние Билла Гейтса</h2>
             <hr>
             <p align="justify">
                 Билл Гейтс стал миллиардером в <b>1987 году</b>, когда ему был 31 год.
@@ -247,7 +247,7 @@
                             «Я сдвинусь вниз в списке самых богатых людей мира и в итоге выйду из него»</strong>, &ndash; написал он в Twitter в <b>2022 году</b>.
                     </p>
             </blockquote>
-            <h2 id="e">Благотворительность, фонд Билла и Мелинды Гейтс</h2>
+            <h2 id="charity">Благотворительность, фонд Билла и Мелинды Гейтс</h2>
             <hr>
             <p align="justify">
                 В <b>2000 году</b> Гейтс и его жена <strong>основали фонд</strong> <cite><a href="https://www.gatesfoundation.org/about/our-story" target="_blank">Bill & Melinda Gates Foundation</a></cite>. 
@@ -295,7 +295,7 @@
                 Гейтс <a href="https://www.rbc.ru/rbcfreenews/5f1a83579a794740dd829f4a" target="_blank">отвергал</a> предположения о том, что он якобы хочет вживлять людям микрочипы и каким-либо образом причастен к созданию коронавируса. 
                 Он <a href="https://www.rbc.ru/society/05/06/2020/5ed982059a7947de81d01f28" target="_blank">называл</a> такие заявления «глупыми и странными».
             </p>
-            <h2 id="f">Книги</h2>
+            <h2 id="books">Книги</h2>
             <hr>
             <p align="justify">
                 Гейтс написал несколько книг, в том числе:
@@ -318,13 +318,13 @@
                 В <b>феврале 2025-го</b> должна выйти новая книга Гейтса <cite>«Исходный код»</cite>. 
                 «Это мемуары о моих ранних годах, начиная с детства и заканчивая моим решением бросить колледж и вместе с Полом Алленом основать Microsoft», &ndash; сообщил предприниматель.  
             </p>
-            <h2 id="g">Фильмы о Билле Гейтсе</h2>
+            <h2 id="movies">Фильмы о Билле Гейтсе</h2>
             <hr> 
             <p align="justify">
                 Карьера Гейтса нашла отражение в целом ряде документальных и художественных фильмов. 
                 Среди них &ndash; <cite>«Пираты Кремниевой долины»</cite> (1999), <cite>«Стив Джобс против Билла Гейтса»</cite> (2015), <cite>«Кто такой Билл Гейтс»</cite> (2020) и др.
             </p>
-            <h2 id="h">Цитаты Билла Гейтса</h2>
+            <h2 id="quotes">Цитаты Билла Гейтса</h2>
             <hr>
             <blockquote>
                 <p>
