--- a/Project/Computer_Geniuses/contacts.html
+++ b/Project/Computer_Geniuses/contacts.html
@@ -31,13 +31,13 @@
         <label for="message">Сообщение:</label>
         <textarea id="message" name="message" rows="5" cols="53" placeholder="Опишите свое предложение..."></textarea><br><br>
         <label for="extra">Дополнительная информация:</label>
-        <input type="text" id="extra" name="extra" placeholder="Номер телефона..."><br><br>    
+        <input type="text" id="extra" name="extra" placeholder="Введите текст здесь"><br><br>    
         <button type="submit">Отправить</button>
     </form><br><hr>
     <h2>Адрес</h2>
-    <p>Контактный номер телефона: +375 29 172 82 15</p>
+    <p>Контактный номер телефона: <a href="tel:80291728215">8029 172 82 15</a></p>
     <p>Адрес: г. Гомель, ул. Мазурова, д. 19</p>
-    <p>Email: computer_geniuses@gmail.com</p>
+    <p>Email: <a href="mailto:computer_geniuses@gmail.com">computer_geniuses@gmail.com</a></p>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d607.9084354365575!2d31.023787776028286!3d52.44954919374735!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46d4691eea589f55%3A0x8c9e4ba6a1893756!2z0YPQu9C40YbQsCDQnNCw0LfRg9GA0L7QstCwIDE5LCDQk9C-0LzQtdC70YwsINCT0L7QvNC10LvRjNGB0LrQsNGPINC-0LHQu9Cw0YHRgtGMIDI0NjA1Mw!5e0!3m2!1sru!2sby!4v1731704930811!5m2!1sru!2sby" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <hr>
     <footer> 
