--- a/Project/Computer_Geniuses/dennis_ratchie.html
+++ b/Project/Computer_Geniuses/dennis_ratchie.html
@@ -52,23 +52,23 @@
                 <td bgcolor="#f4f4f4" height="20"><font size="2"><b>Содержание</b></font></td>
             </tr>
             <tr>
-                <td height="10"><font size="2"><a href="#a">Юность</a></font></td>
+                <td height="10"><font size="2"><a href="#youth">Юность</a></font></td>
             </tr>
             <tr>
-                <td height="10"><font size="2"><a href="#b">Карьера</a></font></td>
+                <td height="10"><font size="2"><a href="#career">Карьера</a></font></td>
             </tr>
             <tr>
-                <td height="10"><font size="2"><a href="#c">Изобретения</a></font></td>
+                <td height="10"><font size="2"><a href="#inventions">Изобретения</a></font></td>
             </tr>
             <tr>
-                <td height="10"><font size="2"><a href="#d">Последние годы</a></font></td>
+                <td height="10"><font size="2"><a href="#recentYears">Последние годы</a></font></td>
             </tr>
             <tr>
-                <td height="10"><font size="2"><a href="#e">Награды</a></font></td>
+                <td height="10"><font size="2"><a href="#awards">Награды</a></font></td>
             </tr>
         </table>
         <article>
-            <h2 id="a">Юность</h2>
+            <h2 id="youth">Юность</h2>
             <hr>
             <p align="justify">
                 Детство Денниса проходило в Нью-Джерси. 
@@ -77,7 +77,7 @@
                 Особый интерес юного инженера вызвала местная компьютерная система <i>Univac I</i>. 
                 Там он получил степень бакалавра по физике и прикладной математике. 
                 
-            <h2 id="b">Карьера</h2>
+            <h2 id="career">Карьера</h2>
             <hr>
             <p align="justify">
                 После окончания обучения Ритчи устроился лаборантом в компьютерную лабораторию института <abbr title="Massachusetts Institute of Technology">MIT</abbr>. 
@@ -118,7 +118,7 @@
             <p align="justify">
                 Так разработчики пришли к идее операционной системы. 
             </p>
-            <h2 id="c">Изобретения</h2>
+            <h2 id="inventions">Изобретения</h2>
             <hr>
             <h3>UNIX и C</h3>
             <p align="justify">
@@ -240,7 +240,7 @@
             <p align="justify"> 
                 Кроме переносимости и производительности, <i>Inferno</i> обладает еще одной очень важной особенностью: наличием языка прикладного программирования <b>Limbo</b>, который был разработан с нуля специально для <i>Inferno</i> и существует только в рамках этой ОС. 
                 Его синтаксис во многом повторяет синтаксис С, но имеет вкрапления из множества других языков.  
-            <h2 id="d">Последние годы</h2>
+            <h2 id="recentYears">Последние годы</h2>
             <hr> 
             <p align="justify">
                 После ухода из <i>Bell Laboratories</i> Ритчи продолжает исследования и разработки в области операционных систем. 
@@ -249,7 +249,7 @@
                 Так как он жил один, невозможно установить точную дату и причину смерти. 
                 Предположительно он скончался от рака простаты, который до этого несколько месяцев лечил. 
             </p>    
-            <h2 id="e">Награды</h2>
+            <h2 id="awards">Награды</h2>
             <hr>
             <ul>
                 <li>В 1982 году Ритчи и Кен Томпсон совместно получили Премию Эмануэля Пиора</li>
