--- a/Project/Computer_Geniuses/tim_berners_lee.html
+++ b/Project/Computer_Geniuses/tim_berners_lee.html
@@ -54,26 +54,26 @@
                 <td bgcolor="#f4f4f4" height="20"><font size="2"><b>Содержание</b></font></td>
             </tr>
             <tr>
-                <td height="10"><font size="2"><a href="#a">Юность</a></font></td>
+                <td height="10"><font size="2"><a href="#youth">Юность</a></font></td>
             </tr>
             <tr>
-                <td height="10"><font size="2"><a href="#b">Карьера</a></font></td>
+                <td height="10"><font size="2"><a href="#career">Карьера</a></font></td>
             </tr>
             <tr>
-                <td height="10"><font size="2"><a href="#c">Изобретения</a></font></td>
+                <td height="10"><font size="2"><a href="#inventions">Изобретения</a></font></td>
             </tr>
             <tr>
-                <td height="10"><font size="2"><a href="#d">Личная жизнь</a></font></td>
+                <td height="10"><font size="2"><a href="#personalLife">Личная жизнь</a></font></td>
             </tr>
             <tr>
-                <td height="10"><font size="2"><a href="#e">Звания</a></font></td>
+                <td height="10"><font size="2"><a href="#titles">Звания</a></font></td>
             </tr>
             <tr>
-                <td height="10"><font size="2"><a href="#f">Награды</a></font></td>
+                <td height="10"><font size="2"><a href="#awards">Награды</a></font></td>
             </tr>
         </table>
         <article>
-            <h2 id="a">Юность</h2>
+            <h2 id="youth">Юность</h2>
             <hr>
             <p align="justify">
                 Тимоти Джон Бернерс-Ли родился в семье учёных-математиков <b>Конвэйа Бернерса-Ли</b> и <b>Мэри Ли Вудса</b>, занятых в ИТ-проектах, они вели исследования в области создания одного из первых компьютеров &mdash; Манчестерский <i>Марк I</i>. 
@@ -117,7 +117,7 @@
                     </small>
                 </figcaption>
             </figure>
-            <h2 id="b">Карьера</h2>
+            <h2 id="career">Карьера</h2>
             <hr>
             <p align="justify">
                 В <b>1976 году</b> Бернерс-Ли переехал в Дорсет и устроился на работу в корпорацию <cite>Plessey</cite>, где в подразделении <cite>Plessey Controls</cite> занимался программированием систем распределенных транзакций, систем передачи информации, а также работал над технологией штрих-кодов.
@@ -167,7 +167,7 @@
             <p align="justify">
                 <b>Сейчас</b> Бернерс-Ли <i>возглавляет Институт открытых данных</i> в Великобритании.
             </p>
-            <h2 id="c">Изобретения</h2>
+            <h2 id="inventions">Изобретения</h2>
             <hr>
             <p align="justify">
                 В 1989 году, работая в <i>CERN</i>, Бернерс-Ли предложил проект, известный как <strong>Всемирная паутина</strong> (англ. World Wide Web). 
@@ -227,7 +227,7 @@
                 Программы смогут сами находить нужные ресурсы, классифицировать данные, выявлять логические связи, делать выводы и даже принимать решения на основе этих выводов. 
                 При широком распространении и грамотном внедрении семантическая паутина может вызвать революцию в Интернете.
             </p>
-            <h2 id="d">Личная жизнь</h2>
+            <h2 id="personalLife">Личная жизнь</h2>
             <hr>
             <p align="justify">
             Бернерс-Ли был женат дважды. 
@@ -237,7 +237,7 @@
             Уже после изобретения <i>World Wide Web</i> он стал прихожанином Унитарианско-универсалистской церкви. 
             Бернерс-Ли любит гулять на природе, играет на пианино и гитаре.
             </p>
-            <h2 id="e">Звания</h2>
+            <h2 id="titles">Звания</h2>
             <hr>
             <ul>
                 <li>В 1994 году Бернерс-Ли стал одним из шести человек, введённых в Зал славы Всемирной паутины.</li>
@@ -274,7 +274,7 @@
             <p align="justify">
                 Тим Бернерс-Ли также является Выдающимся членом Британского компьютерного общества, Почётным членом Института электроинженеров, Почётным членом Общества технических коммуникаций, членом Фонда Гильермо Маркони, членом Американской академии искусств и наук, членом Королевского общества (2001) и Королевской инженерной академии, членом Американского философского общества, иностранным членом Национальной инженерной академии США (2007), Национальной академии наук США (2009).
             </p>
-            <h2 id="f">Награды</h2>
+            <h2 id="awards">Награды</h2>
             <hr>
             <p align="justify">
                 Тим Бернерс-Ли отмечен множеством наград самого разного, в том числе и международного, уровня. 
