--- a/Project/Computer_Geniuses/Ted_Nelson.html
+++ b/Project/Computer_Geniuses/Ted_Nelson.html
@@ -50,26 +50,26 @@
                 <td bgcolor="#f4f4f4" height="20"><font size="2"><b>Содержание</b></font></td>
             </tr>
             <tr>
-                <td  height="10"><font size="2"><a href="#a">Юность</a></font></td>
+                <td  height="10"><font size="2"><a href="#youth">Юность</a></font></td>
             </tr>
             <tr>
-                <td  height="10"><font size="2"><a href="#b">Карьера</a></font></td>
+                <td  height="10"><font size="2"><a href="#career">Карьера</a></font></td>
             </tr>
             <tr>
-                <td  height="10"><font size="2"><a href="#c">Изобретения</a></font></td>
+                <td  height="10"><font size="2"><a href="#inventions">Изобретения</a></font></td>
             </tr>
             <tr>
-                <td  height="10"><font size="2"><a href="#d">Личная жизнь</a></font></td>
+                <td  height="10"><font size="2"><a href="#personalLife">Личная жизнь</a></font></td>
             </tr>
             <tr>
-                <td  height="10"><font size="2"><a href="#e">Награды и достижения</a></font></td>
+                <td  height="10"><font size="2"><a href="#awardsAndAchievements">Награды и достижения</a></font></td>
             </tr>
             <tr>
-                <td height="10"><font size="2"><a href="#f">Опубликованные произведения и книги</a></font></td>
+                <td height="10"><font size="2"><a href="#publishedWorksAndBooks">Опубликованные произведения и книги</a></font></td>
             </tr>
         </table>
         <article>
-            <h2 id="a">Юность</h2>
+            <h2 id="youth">Юность</h2>
             <hr>
             <p align="justify">
                 Нельсон отдает должное своим родителям за большую часть своего творчества и возможностей, которые помогли дать толчок многим его идеям. 
@@ -87,7 +87,7 @@
                 В начале 1960-х годов Нельсон написал Джону Лилли, исследователю дельфинов, с несколькими идеями, которые он придумал для изучения языка дельфинов. Лилли была впечатлена и наняла его. 
                 Нельсон провел год, работая с дельфинами в Коммуникационной исследовательской лаборатории «Lilly» в Майами, анализируя поведение дельфинов и снимая фильмы о деятельности дельфинов, прежде чем перейти к своей карьере в области информационных технологий.
             </p>  
-            <h2 id="b">Карьера</h2>
+            <h2 id="career">Карьера</h2>
             <hr>
             <h3>Компания Itty Bitty Machine</h3>
             <p align="justify">
@@ -109,7 +109,7 @@
                 Он представил себе компьютерную программу, которая помогла бы ему организовать все ветви различных деревьев идей нелинейным способом, гораздо более близким к тому, как на самом деле работает его мозг, чем к линейному стилю бумажных заметок. 
                 Этот взаимосвязанный стиль организации идей Нельсон называл <strong>«гипертекстом»</strong>.
             </p>
-            <h2 id="c">Изобретения</h2>
+            <h2 id="inventions">Изобретения</h2>
             <hr>
             <h3>Гипертекст и гипермедиа</h3>
             <p align="justify">
@@ -243,7 +243,7 @@
                 Концептуальная структура относится к конструкциям, которые программисты имели в виду при проектировании программного обеспечения, таким идеям, как модель страницы веб-сайтов, веб-модель Интернета и модель уровня алгоритмов машинного обучения. 
                 Ощущение включает в себя последние штрихи дизайна, такие как цветовая палитра, выбор слов и типографика.
             </p>
-            <h2 id="d">Личная жизнь</h2>
+            <h2 id="personalLife">Личная жизнь</h2>
             <hr>
             <p align="justify">
                 Первой женой Теда Нельсона была <b>Марлен Малликоут</b>, компьютерный консультант и разработчик программного обеспечения из Орегона. 
@@ -254,7 +254,7 @@
                 Сарно также всю жизнь дружила с Марлен Малликоут, первой женой Нельсона. Сарно &mdash; журналист и редактор, специализирующийся на технологиях. 
                 Она получила <i>«Грэмми»</i> за исполнение Третьей симфонии Малера в симфоническом хоре, а также имеет черный пояс третьей степени от организации <i>боевых искусств Будзинкан</i> в Японии.
             </p>
-            <h2 id="e">Награды и достижения</h2>
+            <h2 id="awardsAndAchievements">Награды и достижения</h2>
             <hr>
             <h3>Премия памяти Юрия Рубинского</h3>
             <p align="justify">
@@ -264,7 +264,7 @@
             <p align="justify">
                 В 2001 году он был посвящен в рыцари французским правительством, став официальным членом французской организации <em>«Officier des Arts et Lettres»</em>.
             </p>
-            <h2 id="f">Опубликованные произведения и книги</h2>
+            <h2 id="publishedWorksAndBooks">Опубликованные произведения и книги</h2>
             <hr>
             <h3>Компьютерная библиотека / Машины мечты</h3>
             <figure>
