--- a/Practices/Practice04/index.html
+++ b/Practices/Practice04/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
+    <title>Структура HTML документа</title>
     <link href="style.css" rel="stylesheet">
     <script src="script.js" defer></script>
-    <title>Структура HTML документа</title>
 </head>
+
 <body>
-    <a href="https://netology.ru/blog/hey-javascript" target="_blank" title="Перейти на сайт netology.ru">Материал взять с сайта</a>
+    <a href="https://netology.ru/blog/hey-javascript" target="_blank" title="Перейти на сайт netology.ru">Материал взять
+        с сайта</a>
     <a href="#h2.">Чем хорош JavaScript</a>
     <a href="#h2/">Ограничения</a>
     <a href="https://netology.ru/blog/hey-javascript" target="_blank" title="Перейти на сайт netology.ru">
@@ -26,14 +29,15 @@
     <p>Если не знаешь JavaScript, делать в программировании интерактивных сайтов нечего.</p>
     <h3>Без JavaScript делать в программировании интерактивных сайтов нечего</h3>
     <h2 id="h2.">Чем хорош JavaScript</h2>
-    <p>JavaScript полностью интегрирован с HTML, он способен как угодно менять веб-страницу. В ответ на событие программист может:
-        <ul>
-            <li>на лету вставить в HTML-код любые теги;</li>
-            <li>задать внешний вид элементов через класс и атрибуты HTML;</li>
-            <li>переместить любой элемент;</li>
-            <li>запросить у пользователя данные;</li>
-            <li>отправить запрос на сервер (технология AJAX).</li>
-        </ul>
+    <p>JavaScript полностью интегрирован с HTML, он способен как угодно менять веб-страницу. В ответ на событие
+        программист может:
+    <ul>
+        <li>на лету вставить в HTML-код любые теги;</li>
+        <li>задать внешний вид элементов через класс и атрибуты HTML;</li>
+        <li>переместить любой элемент;</li>
+        <li>запросить у пользователя данные;</li>
+        <li>отправить запрос на сервер (технология AJAX).</li>
+    </ul>
     </p>
     <p>Это только то, что сразу пришло в голову JavaScript может намного больше, в пределах своей страницы он Бог.</p>
     <p>JavaScript — подходящий язык для изучения программирования. Он достаточно прост, но содержит все
@@ -55,6 +59,8 @@
         для компьютеров со смартфонами. Это модные и трендовые технологии, но глобально JavaScript — язык
         программирования для интернета.</p>
     <h3>На JavaScript пишут для интернета и браузеров.</h3>
-    <p>Нажми на меня</p>   
+    <p>Нажми на меня</p>
+    <script src="script.js" defer></script>
 </body>
+
 </html>
