--- a/Practices/Practice02/index.html
+++ b/Practices/Practice02/index.html
@@ -1,22 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
-    <title>Структура HTML документа</title>
     <link href="style.css" rel="stylesheet">
     <script src="script.js" defer></script>
+    <title>Структура HTML документа</title>
 </head>
-
 <body>
-    <a href="https://netology.ru/blog/hey-javascript" target="_blank" title="Перейти на сайт netology.ru">Материал взять
-        с сайта</a>
-    <a href="#h2.">Чем хорош JavaScript</a>
-    <a href="#h2/">Ограничения</a>
-    <a href="https://netology.ru/blog/hey-javascript" target="_blank" title="Перейти на сайт netology.ru">
-        <img src="html_css_javascript.gif" alt="html_css_javascript" widht="250" class="top-right"></a>
     <h1>Зачем учить JavaScript и где он пригодится</h1>
     <p>JavaScript — это лучший друг HTML и CSS. HTML задает разметку сайта, CSS отвечает за внешний вид,
         а JavaScript все это оживляет.
@@ -28,16 +20,16 @@
     <p>Он работает под Windows, macOS, Linux и на мобильных платформах, то есть везде.</p>
     <p>Если не знаешь JavaScript, делать в программировании интерактивных сайтов нечего.</p>
     <h3>Без JavaScript делать в программировании интерактивных сайтов нечего</h3>
-    <h2 id="h2.">Чем хорош JavaScript</h2>
-    <p>JavaScript полностью интегрирован с HTML, он способен как угодно менять веб-страницу. В ответ на событие
-        программист может:
-    <ul>
-        <li>на лету вставить в HTML-код любые теги;</li>
-        <li>задать внешний вид элементов через класс и атрибуты HTML;</li>
-        <li>переместить любой элемент;</li>
-        <li>запросить у пользователя данные;</li>
-        <li>отправить запрос на сервер (технология AJAX).</li>
-    </ul>
+    <h2>Чем хорош JavaScript</h2>
+    <p>JavaScript полностью интегрирован с HTML, он способен как угодно менять веб-страницу. 
+        В ответ на событие программист может:
+        <ul>
+            <li>на лету вставить в HTML-код любые теги;</li>
+            <li>задать внешний вид элементов через класс и атрибуты HTML;</li>
+            <li>переместить любой элемент;</li>
+            <li>запросить у пользователя данные;</li>
+            <li>отправить запрос на сервер (технология AJAX).</li>
+        </ul>
     </p>
     <p>Это только то, что сразу пришло в голову JavaScript может намного больше, в пределах своей страницы он Бог.</p>
     <p>JavaScript — подходящий язык для изучения программирования. Он достаточно прост, но содержит все
@@ -49,7 +41,7 @@
     <p>Программа на JavaScript — это простой текст. Писать на JavaScript можно в любом текстовом
         редакторе.</p>
     <h3>В пределах своей страницы JavaScript — Бог</h3>
-    <h2 id="h2/">Ограничения</h2>
+    <h2>Ограничения</h2>
     <p>Классический JavaScript — это язык программирования для интернета, он бессилен за пределами браузера. С помощью
         JavaScript нельзя запустить программу на компьютере или записать файл в нужную папку.</p>
     <p>Из-за правил безопасности браузеры ограничивают мощь JavaScript и за пределами «родной» страницы. Управлять
@@ -59,8 +51,6 @@
         для компьютеров со смартфонами. Это модные и трендовые технологии, но глобально JavaScript — язык
         программирования для интернета.</p>
     <h3>На JavaScript пишут для интернета и браузеров.</h3>
-    <p>Нажми на меня</p>
-    <script src="script.js" defer></script>
+    <p>Нажми на меня</p>   
 </body>
-
 </html>
